--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,11 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+input/
+output_hybrid/
+output_monodepth/
+output_semseg/
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
